--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register 'tests/**/*.spec.ts' --exit",
     "build": "tsc",
     "serve": "node dist/index.js",
     "dev": "nodemon src/index.ts"
@@ -22,10 +22,21 @@
   },
   "homepage": "https://github.com/AlexandreResende/url-shortener-ts#readme",
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
+    "@types/chai-as-promised": "^8.0.2",
     "@types/express": "^5.0.1",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.18",
+    "@types/sinon": "^17.0.4",
+    "@types/supertest": "^6.0.3",
+    "chai": "^5.2.0",
+    "chai-as-promised": "^8.0.1",
     "express": "^5.1.0",
+    "mocha": "^11.2.2",
     "nodemon": "^3.1.10",
+    "nyc": "^17.1.0",
+    "sinon": "^20.0.0",
+    "supertest": "^7.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
