--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "tsyringe": "^4.10.0"
   }
 }
