--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "mocha -r ts-node/register 'tests/**/*.spec.ts' --exit",
     "build": "tsc",
     "serve": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "coverage": "nyc --reporter=lcov --reporter=text-summary npm run test"
   },
   "repository": {
     "type": "git",
