--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,16 @@ services:
     build: .
     ports:
       - "3000:3000"
+    depends_on:
+      - redis
     env_file:
       - ".env"
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    expose:
+      - "6379"
 
 networks:
   app-network:
