--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
+    "joi": "^17.13.3",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0"
   }
