--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "joi": "^17.13.3",
+    "redis": "^5.1.1",
     "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
