--- a/package.json
+++ b/package.json
@@ -36,15 +36,16 @@
     "supertest": "^7.1.1"
   },
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "joi": "^17.13.3",
-    "reflect-metadata": "^0.2.2",
-    "tsyringe": "^4.10.0",
     "@types/express": "^5.0.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.18",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "joi": "^17.13.3",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
+    "tsyringe": "^4.10.0",
     "typescript": "^5.8.3"
   }
 }
