--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "mocha -r ts-node/register 'tests/**/*.spec.ts' --exit",
+    "test": "NODE_ENV=test mocha -r ts-node/register 'tests/**/*.spec.ts' --exit",
     "build": "tsc",
     "serve": "node dist/index.js",
     "dev": "nodemon src/index.ts",
@@ -25,8 +25,10 @@
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
     "@types/chai-as-promised": "^8.0.2",
+    "@types/cors": "^2.8.19",
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "chai": "^5.2.0",
     "chai-as-promised": "^8.0.1",
     "mocha": "^11.2.2",
@@ -39,11 +41,13 @@
     "@types/express": "^5.0.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.15.18",
+    "cors": "^2.8.6",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "joi": "^17.13.3",
     "reflect-metadata": "^0.2.2",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "tsyringe": "^4.10.0",
     "typescript": "^5.8.3"
