--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   api:
     build: .
@@ -8,6 +7,10 @@ services:
       - redis
     env_file:
       - ".env"
+    environment:
+      - REDIS_URL=redis://redis:6379
+    networks:
+      - app-network
   redis:
     image: "redis:alpine"
     ports:
@@ -16,6 +19,8 @@ services:
       - "6379"
     volumes:
       - redis_data:/data
+    networks:
+      - app-network
 
 volumes:
   redis_data:
